[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
name = "sometime"
version = "1.2.1"
description = "Get timestamp, formatted date, and perform date/time operations."
readme = "README.md"
requires-python = ">=3.10"
license = "LICENSE.txt"
keywords = ["date", "time", "timestamp", "utc"]
authors = [
    { name="Rodney Maniego Jr." },
    { email="rodney.maniegojr@gmail.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
homepage = "https://github.com/rmaniego/sometime"
documentation = "https://sometime.readthedocs.io"
